--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "parcel": "^2.12.0"
   },
   "dependencies": {
+    "@vaadin/router": "^1.7.5",
     "cloudinary": "^2.5.0",
     "cors": "^2.8.5",
     "dropzone": "^6.0.0-beta.2",
