--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "parcel": "^2.12.0"
   },
   "dependencies": {
+    "@mapbox/search-js-web": "^1.0.0-beta.22",
     "@vaadin/router": "^1.7.5",
     "cloudinary": "^2.5.0",
     "cors": "^2.8.5",
